--- a/services/auth-service/package.json
+++ b/services/auth-service/package.json
@@ -21,6 +21,7 @@
     "iconv-lite": "^0.6.3",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.1",
+    "nodemailer": "^7.0.3",
     "sequelize": "^6.37.7",
     "zod": "^3.25.28"
   },
@@ -32,6 +33,7 @@
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.21",
+    "@types/nodemailer": "^6.4.17",
     "@types/supertest": "^6.0.3",
     "supertest": "^7.1.1",
     "ts-node-dev": "^2.0.0",
