--- a/services/auth-service/package.json
+++ b/services/auth-service/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "cross-env NODE_ENV=test jest",
+    "test:unit": "cross-env NODE_ENV=test jest src/__tests__/unit",
+    "test:functional": "cross-env NODE_ENV=test jest src/__tests__/functional",
+    "test:integration": "cross-env NODE_ENV=test jest src/__tests__/integration",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts"
   },
   "keywords": [],
@@ -35,7 +38,10 @@
     "@types/node": "^22.15.21",
     "@types/nodemailer": "^6.4.17",
     "@types/supertest": "^6.0.3",
+    "cross-env": "^7.0.3",
+    "jest": "^29.7.0",
     "supertest": "^7.1.1",
+    "ts-jest": "^29.3.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   }
