--- a/services/auth-service/package.json
+++ b/services/auth-service/package.json
@@ -21,11 +21,14 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
+    "express-session": "^1.18.1",
     "iconv-lite": "^0.6.3",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.1",
     "nodemailer": "^7.0.3",
+    "qrcode": "^1.5.4",
     "sequelize": "^6.37.7",
+    "speakeasy": "^2.0.0",
     "zod": "^3.25.28"
   },
   "devDependencies": {
@@ -33,10 +36,13 @@
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.1",
+    "@types/express-session": "^1.18.1",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.21",
     "@types/nodemailer": "^6.4.17",
+    "@types/qrcode": "^1.5.5",
+    "@types/speakeasy": "^2.0.10",
     "@types/supertest": "^6.0.3",
     "cross-env": "^7.0.3",
     "jest": "^29.7.0",
