--- a/services/auth-service/package.json
+++ b/services/auth-service/package.json
@@ -8,7 +8,9 @@
     "test:unit": "cross-env NODE_ENV=test jest src/__tests__/unit",
     "test:functional": "cross-env NODE_ENV=test jest src/__tests__/functional",
     "test:integration": "cross-env NODE_ENV=test jest src/__tests__/integration",
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts"
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "build": "tsc",
+    "start": "node dist/server.js"
   },
   "keywords": [],
   "author": "",
@@ -29,6 +31,7 @@
     "qrcode": "^1.5.4",
     "sequelize": "^6.37.7",
     "speakeasy": "^2.0.0",
+    "winston": "^3.17.0",
     "zod": "^3.25.28"
   },
   "devDependencies": {
