--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -7,9 +7,11 @@ COPY package*.json ./
 RUN npm config set progress=false
 RUN npm config set cache /tmp/npm-cache --global
 
-RUN npm install --production
+RUN npm install
 
 COPY . .
+
+RUN npm run build   
 
 FROM node:20-alpine
 
@@ -17,7 +19,7 @@ WORKDIR /index
 
 COPY --from=build /index/node_modules ./node_modules
 
-COPY --from=build /index ./
+COPY --from=build /index/dist ./dist  
 
 EXPOSE 4000
 
