--- a/services/auth-service/package.json
+++ b/services/auth-service/package.json
@@ -9,7 +9,8 @@
     "test:functional": "cross-env NODE_ENV=test jest src/__tests__/functional",
     "test:integration": "cross-env NODE_ENV=test jest src/__tests__/integration",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "build": "tsc",
+    "clean": "rimraf dist",
+    "build": "npm run clean && tsc",
     "start": "node dist/server.js"
   },
   "keywords": [],
@@ -26,13 +27,16 @@
     "express-session": "^1.18.1",
     "iconv-lite": "^0.6.3",
     "jsonwebtoken": "^9.0.2",
+    "ms": "^2.1.3",
+    "multer": "^2.0.1",
     "mysql2": "^3.14.1",
     "nodemailer": "^7.0.3",
     "qrcode": "^1.5.4",
     "sequelize": "^6.37.7",
+    "shared": "file:../../shared",
     "speakeasy": "^2.0.0",
     "winston": "^3.17.0",
-    "zod": "^3.25.28"
+    "zod": "^3.25.51"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -42,6 +46,7 @@
     "@types/express-session": "^1.18.1",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.15.21",
     "@types/nodemailer": "^6.4.17",
     "@types/qrcode": "^1.5.5",
@@ -49,6 +54,7 @@
     "@types/supertest": "^6.0.3",
     "cross-env": "^7.0.3",
     "jest": "^29.7.0",
+    "rimraf": "^6.0.1",
     "supertest": "^7.1.1",
     "ts-jest": "^29.3.4",
     "ts-node-dev": "^2.0.0",
