--- a/services/user-service/Dockerfile
+++ b/services/user-service/Dockerfile
@@ -2,21 +2,24 @@ FROM node:20-alpine AS build
 
 WORKDIR /app
 
-COPY package*.json ./
+# Copier d'abord package.json + package-lock.json pour profiter du cache Docker
+COPY services/user-service/package.json ./
+COPY shared ./shared
+
+# Copier tout le code source ensuite
+COPY services/user-service ./
 
 RUN npm config set progress=false
 RUN npm config set cache /tmp/npm-cache --global
+RUN npm cache clean --force
+RUN npm install --omit=dev
 
-RUN npm install --production
-
-COPY . .
 
 FROM node:20-alpine
 
 WORKDIR /app
 
 COPY --from=build /app/node_modules ./node_modules
-
 COPY --from=build /app ./
 
 EXPOSE 3003
