--- a/services/wishlist-service/Dockerfile
+++ b/services/wishlist-service/Dockerfile
@@ -2,21 +2,24 @@ FROM node:20-alpine AS build
 
 WORKDIR /app
 
-COPY package*.json ./
+# Copier les fichiers package.json et package-lock.json avant tout
+COPY services/wishlist-service/package.json ./
+COPY shared ./shared
+
+# Copier le code source après l'installation des dépendances
+COPY services/wishlist-service ./
 
 RUN npm config set progress=false
 RUN npm config set cache /tmp/npm-cache --global
+RUN npm cache clean --force
+RUN npm install --omit=dev
 
-RUN npm install --production
-
-COPY . .
 
 FROM node:20-alpine
 
 WORKDIR /app
 
 COPY --from=build /app/node_modules ./node_modules
-
 COPY --from=build /app ./
 
 EXPOSE 3004
