--- a/services/wishlist-service/Dockerfile
+++ b/services/wishlist-service/Dockerfile
@@ -1,41 +1,24 @@
-FROM node:20-alpine AS build
+FROM node:18-alpine AS builder
 
 WORKDIR /app
 
-# Installer npm 8 (optionnel)
-RUN npm install -g npm@8.19.3
+COPY package*.json ./
 
-# Copier package.json + package-lock.json en priorité (prend en compte si tu as un package-lock.json)
-COPY services/exchange-service/package*.json ./
+RUN npm install
 
-# Copier le dossier shared si besoin
-COPY shared ./shared
+COPY . .
 
-# Installer les dépendances (prod seulement)
-RUN npm config set progress=false \
- && npm config set cache /tmp/npm-cache --global \
- && npm cache clean --force \
- && npm install --omit=dev
+RUN npm run build
 
-# Copier le code source du service
-COPY services/exchange-service ./
-
-# Construire le service si besoin (exemple)
-# RUN npm run build
-
-FROM node:20-alpine
+FROM node:18-alpine
 
 WORKDIR /app
 
-# Installer npm 8 (optionnel)
-RUN npm install -g npm@8.19.3
+COPY --from=builder /app/dist ./dist
+COPY package*.json ./
 
-# Copier node_modules du build
-COPY --from=build /app/node_modules ./node_modules
+RUN npm install --production
 
-# Copier le reste des fichiers du build
-COPY --from=build /app ./
-
-EXPOSE 3004  
+EXPOSE 3004
 
 CMD ["node", "dist/server.js"]
