--- a/services/exchange-service/package.json
+++ b/services/exchange-service/package.json
@@ -24,13 +24,13 @@
     "multer": "^2.0.1",
     "mysql2": "^3.14.1",
     "sequelize": "^6.37.7",
-    "shared": "file:../../shared",
     "supertest": "^7.1.1",
     "winston": "^3.17.0",
     "zod": "^3.25.51"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
