--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - "4000:4000"
     restart: unless-stopped
     env_file:
-      - ./gateway/.env
+      - ./gateway/.env.docker
 
   auth-service:
     build:
