--- a/services/user-service/Dockerfile
+++ b/services/user-service/Dockerfile
@@ -15,6 +15,7 @@ FROM node:18-alpine
 WORKDIR /app
 
 COPY --from=builder /app/dist ./dist
+COPY --from=builder /app/public ./public
 COPY package*.json ./
 
 RUN npm install --production
