--- a/gateway/package.json
+++ b/gateway/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "clean": "rimraf dist",
     "build": "npm run clean && tsc",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"No tests yet\" && exit 0",
     "dev": "ts-node index.ts",
     "start": "node dist/index.js"
   },
