--- a/services/auth-service/Dockerfile
+++ b/services/auth-service/Dockerfile
@@ -17,7 +17,7 @@ WORKDIR /app
 COPY --from=builder /app/dist ./dist
 COPY package*.json ./
 
-RUN npm install --production
+RUN npm install
 
 EXPOSE 3001
 
