--- a/services/auth-service/package.json
+++ b/services/auth-service/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "cross-env NODE_ENV=test jest",
+    "test-local": "cross-env NODE_ENV=test-local jest",
+    "test-docker": "cross-env NODE_ENV=test-docker jest",
     "test:unit": "cross-env NODE_ENV=test jest src/__tests__/unit",
     "test:functional": "cross-env NODE_ENV=test jest src/__tests__/functional",
     "test:integration": "cross-env NODE_ENV=test jest src/__tests__/integration",
@@ -46,7 +47,7 @@
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.12",
-    "@types/node": "^22.15.21",
+    "@types/node": "^22.15.30",
     "@types/nodemailer": "^6.4.17",
     "@types/qrcode": "^1.5.5",
     "@types/speakeasy": "^2.0.10",
