--- a/services/user-service/package.json
+++ b/services/user-service/package.json
@@ -39,6 +39,7 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^22.15.18",
     "@types/supertest": "^6.0.3",
+    "cross-env": "^7.0.3",
     "jest": "^29.7.0",
     "rimraf": "^6.0.1",
     "supertest": "^7.1.1",
