jenkins docker eval

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,11 @@ services:
     #   - ./gateway/.env
     environment:
       - NODE_ENV=docker
+    depends_on:
+      - auth-service
+      - user-service
+      - wishlist-service
+      - exchange-service
 
   auth-service:
     build:
@@ -30,6 +35,8 @@ services:
     #   - ./services/auth-service/.env
     environment:
       - NODE_ENV=docker
+    depends_on:
+      - mysql
 
   user-service:
     build:
@@ -47,6 +54,8 @@ services:
       - NODE_ENV=docker
     volumes:
       - ./services/user-service/public/uploads:/app/public/uploads
+    depends_on:
+      - mysql
 
   wishlist-service:
     build:
@@ -62,6 +71,8 @@ services:
     #   - ./services/wishlist-service/.env
     environment:
       - NODE_ENV=docker
+    depends_on:
+      - mysql
 
   exchange-service:
     build:
@@ -77,6 +88,8 @@ services:
     #   - ./services/exchange-service/.env
     environment:
       - NODE_ENV=docker
+    depends_on:
+      - mysql
 
   mysql:
       image: mysql:8.0
