--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -88,7 +88,7 @@ services:
         - "3307:3306"
       volumes:
         - mysql_data:/var/lib/mysql
-        - ./mysql/init/init.mysql:/docker-entrypoint-initdb.d/init.sql:ro
+        - ./mysql/init/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
       restart: unless-stopped
         
 volumes:
