--- a/services/wishlist-service/package.json
+++ b/services/wishlist-service/package.json
@@ -14,12 +14,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.9",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jest": "^29.7.0",
+    "jsonwebtoken": "^9.0.2",
     "ms": "^2.1.3",
     "multer": "^2.0.1",
     "mysql2": "^3.14.1",
