--- a/services/notification-service/package.json
+++ b/services/notification-service/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.9.0",
     "@types/jsonwebtoken": "^9.0.9",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
