--- a/services/exchange-service/package.json
+++ b/services/exchange-service/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jest": "^29.7.0",
+    "jsonwebtoken": "^9.0.2",
     "ms": "^2.1.3",
     "multer": "^2.0.1",
     "mysql2": "^3.14.1",
