--- a/services/exchange-service/package.json
+++ b/services/exchange-service/package.json
@@ -16,6 +16,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "axios": "^1.10.0",
         "bcrypt": "^6.0.0",
         "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
@@ -32,6 +33,7 @@
         "zod": "^3.25.51"
     },
     "devDependencies": {
+        "@types/axios": "^0.14.4",
         "@types/bcrypt": "^5.0.2",
         "@types/cookie-parser": "^1.4.8",
         "@types/cors": "^2.8.18",
