--- a/services/exchange-service/package.json
+++ b/services/exchange-service/package.json
@@ -37,6 +37,7 @@
         "@types/cors": "^2.8.18",
         "@types/express": "^5.0.1",
         "@types/jest": "^29.5.14",
+        "@types/jsonwebtoken": "^9.0.10",
         "@types/multer": "^1.4.12",
         "@types/node": "^22.16.0",
         "@types/supertest": "^6.0.3",
