--- a/services/wishlist-service/package.json
+++ b/services/wishlist-service/package.json
@@ -1,52 +1,56 @@
 {
-    "name": "wishlist-service",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"No tests yet\" && exit 0",
-        "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-        "clean": "rimraf dist",
-        "build": "npm run clean && tsc",
-        "start": "node dist/server.js",
-        "migrate": "sequelize-cli db:migrate --require ts-node/register",
-        "migrate:undo": "sequelize-cli db:migrate:undo --require ts-node/register"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "@types/jsonwebtoken": "^9.0.9",
-        "axios": "^1.10.0",
-        "bcrypt": "^6.0.0",
-        "cookie-parser": "^1.4.7",
-        "cors": "^2.8.5",
-        "dotenv": "^16.5.0",
-        "express": "^5.1.0",
-        "jest": "^29.7.0",
-        "jsonwebtoken": "^9.0.2",
-        "ms": "^2.1.3",
-        "multer": "^2.0.1",
-        "mysql2": "^3.14.1",
-        "sequelize": "^6.37.7",
-        "supertest": "^7.1.1",
-        "winston": "^3.17.0",
-        "zod": "^3.25.51"
-    },
-    "devDependencies": {
-        "@types/bcrypt": "^5.0.2",
-        "@types/cookie-parser": "^1.4.8",
-        "@types/cors": "^2.8.18",
-        "@types/express": "^5.0.1",
-        "@types/jest": "^29.5.14",
-        "@types/multer": "^1.4.12",
-        "@types/node": "^22.16.0",
-        "@types/supertest": "^6.0.3",
-        "rimraf": "^6.0.1",
-        "ts-node-dev": "^2.0.0",
-        "typescript": "^5.8.3"
-    },
-    "sequelize-cli": {
-        "config": "sequelize-cli.config.js"
-    }
+  "name": "wishlist-service",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test-local": "cross-env NODE_ENV=test-local jest --detectOpenHandles --forceExit",
+    "test-docker": "cross-env NODE_ENV=test-docker jest --detectOpenHandles --forceExit",
+    "test:unit": "cross-env NODE_ENV=test-local jest tests/unit",
+    "test:functional": "cross-env NODE_ENV=test-local jest tests/functional",
+    "test:integration": "cross-env NODE_ENV=test-local jest tests/integration",
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "clean": "rimraf dist",
+    "build": "npm run clean && tsc",
+    "start": "node dist/server.js",
+    "migrate": "sequelize-cli db:migrate --require ts-node/register",
+    "migrate:undo": "sequelize-cli db:migrate:undo --require ts-node/register"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@types/jsonwebtoken": "^9.0.9",
+    "axios": "^1.10.0",
+    "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "jest": "^29.7.0",
+    "jsonwebtoken": "^9.0.2",
+    "ms": "^2.1.3",
+    "multer": "^2.0.1",
+    "mysql2": "^3.14.1",
+    "sequelize": "^6.37.7",
+    "supertest": "^7.1.1",
+    "winston": "^3.17.0",
+    "zod": "^3.25.51"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.8",
+    "@types/cors": "^2.8.18",
+    "@types/express": "^5.0.1",
+    "@types/jest": "^29.5.14",
+    "@types/multer": "^1.4.12",
+    "@types/node": "^22.16.0",
+    "@types/supertest": "^6.0.3",
+    "rimraf": "^6.0.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.8.3"
+  },
+  "sequelize-cli": {
+    "config": "sequelize-cli.config.js"
+  }
 }
