--- a/services/auth-service/package.json
+++ b/services/auth-service/package.json
@@ -34,6 +34,8 @@
     "multer": "^2.0.1",
     "mysql2": "^3.14.1",
     "nodemailer": "^7.0.3",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "qrcode": "^1.5.4",
     "sequelize": "^6.37.7",
     "speakeasy": "^2.0.0",
@@ -51,9 +53,12 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^22.16.0",
     "@types/nodemailer": "^6.4.17",
+    "@types/passport": "^1.0.17",
+    "@types/passport-google-oauth20": "^2.0.16",
     "@types/qrcode": "^1.5.5",
     "@types/speakeasy": "^2.0.10",
     "@types/supertest": "^6.0.3",
+    "@types/uuid": "^10.0.0",
     "cross-env": "^7.0.3",
     "jest": "^29.7.0",
     "rimraf": "^6.0.1",
