--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -3,7 +3,6 @@ FROM node:18-alpine AS builder
 WORKDIR /app
 
 COPY package*.json ./
-
 RUN npm install
 
 COPY . .
@@ -14,10 +13,10 @@ FROM node:18-alpine
 
 WORKDIR /app
 
+ENV NODE_ENV=production
+
 COPY --from=builder /app/node_modules ./node_modules
-
 COPY --from=builder /app/dist ./dist
-
 COPY --from=builder /app/package.json ./package.json
 
 EXPOSE 4000
