--- a/services/notification-service/package.json
+++ b/services/notification-service/package.json
@@ -4,15 +4,14 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test-local": "cross-env NODE_ENV=test-local jest --detectOpenHandles --forceExit",
-        "test-docker": "cross-env NODE_ENV=test-docker jest --detectOpenHandles --forceExit",
-        "test:unit": "cross-env NODE_ENV=test-local jest src/tests/unit",
-        "test:functional": "cross-env NODE_ENV=test-local jest src/tests/functional",
-        "test:integration": "cross-env NODE_ENV=test-local jest src/tests/integration",
         "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
         "clean": "rimraf dist",
         "build": "npm run clean && tsc",
         "start": "node dist/server.js",
+        "test": "cross-env NODE_ENV=test jest --detectOpenHandles --forceExit",
+        "test:unit": "cross-env NODE_ENV=test jest tests/unit",
+        "test:functional": "cross-env NODE_ENV=test jest tests/functional",
+        "test:integration": "cross-env NODE_ENV=test jest tests/integration",
         "migrate": "sequelize-cli db:migrate --require ts-node/register",
         "migrate:undo": "sequelize-cli db:migrate:undo --require ts-node/register"
     },
