fix: add public folder to auth-service Docker image

--- a/services/auth-service/Dockerfile
+++ b/services/auth-service/Dockerfile
@@ -18,7 +18,11 @@ ENV NODE_ENV=production
 COPY package*.json ./
 RUN npm install --omit=dev
 
+# ✅ Copie les fichiers buildés
 COPY --from=builder /app/dist ./dist
+
+# ✅ Copie les fichiers statiques nécessaires à Express
+COPY --from=builder /app/public ./public
 
 EXPOSE 3001
 
