--- a/services/auth-service/package.json
+++ b/services/auth-service/package.json
@@ -29,6 +29,7 @@
     "express-session": "^1.18.1",
     "iconv-lite": "^0.6.3",
     "jsonwebtoken": "^9.0.2",
+    "mariadb": "^3.4.5",
     "ms": "^2.1.3",
     "multer": "^2.0.1",
     "mysql2": "^3.14.1",
