--- a/gateway/package.json
+++ b/gateway/package.json
@@ -10,6 +10,7 @@
         "start": "NODE_ENV=production node dist/index.js"
     },
     "dependencies": {
+        "axios": "^1.11.0",
         "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
         "dotenv": "^16.5.0",
