--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -19,6 +19,8 @@ COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/package.json ./package.json
 
+ENV PORT=4000
+
 EXPOSE 4000
 
 CMD ["node", "dist/index.js"]
