fix uuid upload images

--- a/services/user-service/package.json
+++ b/services/user-service/package.json
@@ -34,6 +34,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "mysql2": "^3.14.1",
     "sequelize": "^6.37.7",
+    "uuid": "^11.1.0",
     "winston": "^3.17.0",
     "zod": "^3.25.51"
   },
