--- a/services/exchange-service/package.json
+++ b/services/exchange-service/package.json
@@ -35,6 +35,7 @@
     "mysql2": "^3.14.1",
     "sequelize": "^6.37.7",
     "supertest": "^7.1.1",
+    "uuid": "^11.1.0",
     "winston": "^3.17.0",
     "zod": "^3.25.51"
   },
