--- a/services/wishlist-service/package.json
+++ b/services/wishlist-service/package.json
@@ -40,6 +40,7 @@
     "sequelize": "^6.37.7",
     "sequelize-cli": "^6.6.3",
     "supertest": "^7.1.1",
+    "uuid": "^11.1.0",
     "winston": "^3.17.0",
     "zod": "^3.25.51"
   },
